adding loading state

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,10 @@
 .swiper-pagination {
   color: white !important;
 }
-
+/* 
+.loadinganimation{
+  animation:
+} */
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
