--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,10 @@
 .swiper-pagination {
   color: white !important;
 }
+
+.swiper-pagination-bullet-active {
+  background: white !important;
+}
 /* 
 .loadinganimation{
   animation:
