--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 @import "@/app/leaflet.css";
 
+@layer base {
+  body {
+    @apply bg-ggreylight;
+  }
+}
+
 /* Swiper */
 .swiper-button-prev {
   color: white !important;
@@ -19,11 +25,8 @@
 .swiper-pagination-bullet-active {
   background: white !important;
 }
-/* 
-.loadinganimation{
-  animation:
-} */
-/* :root {
+
+/* /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -37,7 +40,7 @@
   }
 }
 
-body {
+body { 
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -47,8 +50,8 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
+/* @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-} */
+}  */
